app/src/main/java/com/example/basecleanarchitechturedagger/data/remote/entity/error/UnknownError.kt
package com.example.basecleanarchitechturedagger.data.remote.entity.error

data class UnknownError(override var status: Int = 0) : ErrorInterface
